Update slide text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="flex items-center justify-center h-screen">
     <div class="flex flex-col items-center p-4">
       <img id="imageDisplay" src="./images/image1.gif" alt="Cute kitten with flowers" class="rounded-md h-[300px]" style="object-fit: cover;" />
-      <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">Will you be my Valentine?</h2>
+      <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4 text-center"></h2>
       <div class="flex gap-4 pt-[20px] items-center" id="responseButtons">
         <button id="yesButton"
           class="bounce2 inline-flex items-center justify-center whitespace-nowrap rounded-md text-[20px] font-medium disabled:pointer-events-none disabled:opacity-50 hover:bg-green-400 min-h-12 min-w-[75px] px-4 py-2 bg-green-500 text-white transition">
@@ -67,10 +67,25 @@
       "./images/image6.gif",
       "./images/image7.gif"
     ];
+    const slides = [
+      ["Before you become Mrs Pal\u2026", "One small question", "Will you be my Valentine?"],
+      ["Oh wow", "Rejecting your future husband already?"],
+      ["Careful", "I remember these things after marriage \uD83D\uDE0C"],
+      ["Think again", "Your Valentine comes with free cuddles and unlimited attention"],
+      ["You know you will say yes anyway", "Why acting expensive now?"],
+      ["Last chance", "Or I will start flirting with you again from zero \uD83D\uDE0F"]
+    ];
+    const yesSlide = ["I knew it", "Smart choice", "You just unlocked Premium Mr Pal features \u2764\uFE0F"];
+
+    function renderSlide(lines) {
+      valentineQuestion.innerHTML = lines.map(line => `<span class="block">${line}</span>`).join("");
+    }
+
+    renderSlide(slides[0]);
   
     noButton.addEventListener('click', function() {
-      if (noClickCount < 5) {
-        noClickCount++;
+      if (noClickCount < slides.length - 1) {
+        noClickCount += 1;
         imageDisplay.src = imagePaths[noClickCount];
         buttonHeight += 35; // Increase height by 5px on each click
         buttonWidth += 35;
@@ -78,15 +93,13 @@
         yesButton.style.height = `${buttonHeight}px`; // Update button height
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; // Update font size
-        if (noClickCount < 6) {
-          noButton.textContent = ["No", "Are you sure?", "Pookie please", "Don't do this to me :(", "You're breaking my heart", "I'm gonna cry..."][noClickCount];
-        }
+        renderSlide(slides[noClickCount]);
       }
     });
   
     yesButton.addEventListener('click', () => {
       imageDisplay.src = './images/image7.gif'; // Change to image7.gif
-      valentineQuestion.textContent = "Yayyy!! :3"; // Change the question text
+      renderSlide(yesSlide); // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
     });
